注册功能的逻辑代码业务

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
         android:layout_margin="10dp">
 
         <Button
-            android:id="@+id/bt_register"
+            android:id="@+id/bt_login_register"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -73,7 +73,7 @@
             android:text="注册" />
 
         <Button
-            android:id="@+id/bt_login"
+            android:id="@+id/bt_login_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
