--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,24 +16,28 @@
     </FrameLayout>
 
     <RadioGroup
+        android:id="@+id/rg_main"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal">
 
 
         <RadioButton
+            android:id="@+id/rb_main_chat"
             android:text="会话"
             style="@style/MainButtonStyle">
 
         </RadioButton>
 
         <RadioButton
+            android:id="@+id/rb_main_contact"
             style="@style/MainButtonStyle"
             android:text="联系人">
 
         </RadioButton>
 
         <RadioButton
+            android:id="@+id/rb_main_setting"
             style="@style/MainButtonStyle"
             android:text="设置">
 
